src/objects/c2g__codaAccountingSettings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Accounting Settings (FF)</description>
    <fields>
        <fullName>c2g__AllocationJournalScopeSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Batch size - allocation journal</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AllocationSchedulerScopeSize__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Scope size - allocation scheduler batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AllocationTransactionScopeSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Batch size - allocation transaction</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__AllowDeleteAccountInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Account in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowDeleteProductInUse__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Deletion of Product in Use</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowModificationOfPrintStatus__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Modification of Print Status</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowOverrideOfTaxValues__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Allow Override of SUT Tax Values</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowSubAnalysisFieldEdit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Edit Sub-Analysis (after posting)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AllowUseOfLocalGLAs__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables/disables the ability to use local and corporate GLAs.</description>
        <label>Allow Use of Local GLAs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__AvalaraUseAccountNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Avalara Tax calls use account number</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__BackgroundPostingRetry__c</fullName>
        <label>Background Posting Retry</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BackgroundWorkerAttemptsAvalara__c</fullName>
        <label>Background Worker Attempts Avalara</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__BackgroundWorkerAttempts__c</fullName>
        <label>Background Worker Attempts</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Chatter__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Chatter Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__ConvertToCreditNoteLinesThreshold__c</fullName>
        <label>Convert To SCR Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ConvertToPCRLinesThreshold__c</fullName>
        <label>Convert To PCR Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CopyProductDescriptionToLine__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Copies the product description to the document line description, if empty.</description>
        <label>Copy Product Description to Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteManageLinesCOMBFieldset__c</fullName>
        <description>Custom field set name for Credit Note Manage Lines (Combined Tax) Field Set</description>
        <label>CRN Manage Lines (COMB) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteManageLinesPreload__c</fullName>
        <label>CRN Manage Lines Preload</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteManageLinesSUTFieldset__c</fullName>
        <description>Custom field set name for Credit Note Manage Lines (SUT) Fieldset</description>
        <label>CRN Manage Lines (SUT) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CreditNoteManageLinesVATFieldset__c</fullName>
        <description>Custom field set name for Credit Note Manage Lines (VAT/GST) Field Set</description>
        <label>CRN Manage Lines (VAT/GST) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomPrintTemplate__c</fullName>
        <label>Custom Sales Invoice Print Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__CustomSalesCreditNotePrintTemplate__c</fullName>
        <label>Custom Sales Credit Note Print Template</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DisableCustomPermissions__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Disable Permissions on VisualForce Pages</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__DisableSelectCompanyValidation__c</fullName>
        <label>Disable Select Company Validation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardCreditNoteLinesThreshold__c</fullName>
        <label>Discard Credit Note Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__DiscardInvoiceLinesThreshold__c</fullName>
        <label>Discard Invoice Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Email__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Email Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EnableEditDimensionsafterposting__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Enable Edit Dimensions (after posting)</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__EnableOverrideProductGLA__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enable Override Product GLA</description>
        <label>Enable Override Product GLA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__GLAFilteringInPaymentSelection__c</fullName>
        <label>GLA Filtering in Payment Selection</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__GenerateBPSEmailNotifications__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Generate BPS Email Notifications</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HeaderExpandedPayable__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Control through a button show/hide header information</description>
        <label>Header Expanded Payable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideDimension1__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Allocation Dimension 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideDimension2__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Allocation Dimension 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideDimension3__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Allocation Dimension 3</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideEmailButtonOnInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Email Button On Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HidePrintButtonsOnInvoice__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Print Buttons On Invoice</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__HideSummarizedDataNotification__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hide Summarized Data Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceManageLinesCOMBFieldset__c</fullName>
        <description>Custom field set name for Invoice Manage Lines (Combined Tax) Fieldset</description>
        <label>Invoice Manage Lines (COMB) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceManageLinesPreload__c</fullName>
        <label>Invoice Manage Lines Preload</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceManageLinesSUTFieldset__c</fullName>
        <description>Custom field set name for Invoice Manage Lines (SUT) Fieldset</description>
        <label>Invoice Manage Lines (SUT) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__InvoiceManageLinesVATFieldset__c</fullName>
        <description>Custom field set name for Invoice Manage Lines (VAT/GST) Field Set</description>
        <label>Invoice Manage Lines (VAT/GST) Field Set</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__MassDeleteQueueableSize__c</fullName>
        <defaultValue>100</defaultValue>
        <label>Queueable size - Mass Delete batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MassDeleteScopeSize__c</fullName>
        <defaultValue>2000</defaultValue>
        <label>Scope size - Mass Delete batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__MaximumQueueSize__c</fullName>
        <label>Maximum Queue Size</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__NotificationObjectRecipients__c</fullName>
        <inlineHelpText>Separate email addresses using semicolons (;)  This field only applies to email and Chatter notifications. Users may not have tasks.</inlineHelpText>
        <label>Notification on objects</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>c2g__OverrideCurrencyValuesonJournalLine__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Override Currency Values on Journal Line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__PayableCreditNoteLinesThreshold__c</fullName>
        <description>The maximum number of lines that can be attached to a payable credit note before the document has to be posted asynchronously (by the Background Posting Scheduler). Defaults to 80.</description>
        <label>Payable Credit Note Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PayableInvoiceLinesThreshold__c</fullName>
        <description>The maximum number of lines that can be attached to a payable invoice before the document has to be posted asynchronously (by the Background Posting Scheduler). Defaults to 80.</description>
        <label>Payable Invoice Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PostCreditNoteLinesThreshold__c</fullName>
        <description>The maximum number of lines on a sales credit note that can be created and posted interactively (online). The default number of lines is 250.</description>
        <label>Sales Credit Note Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__PostInvoiceLinesThreshold__c</fullName>
        <description>The maximum number of lines on a sales invoice that can be created and posted interactively (online). The default number of lines is 250.</description>
        <label>Sales Invoice Lines Threshold</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ProfitabilityReportId__c</fullName>
        <description>The ID of the report to be displayed on the profitability reporting widget.</description>
        <label>Profitability Report ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__RetainBackgroundWorkerLogsDays__c</fullName>
        <defaultValue>90</defaultValue>
        <label>Keep Background Worker Error Logs (Days)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__ShowDebitCreditIndicator__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Show separate fields to enter debit and credit values.</description>
        <label>Show Debit Credit Indicator</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SplitYearEndIntoPeriods__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Split Year End into Periods</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__SummarizationScopeSize__c</fullName>
        <defaultValue>200</defaultValue>
        <label>Scope size - summarization scope batch.</label>
        <precision>15</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>c2g__Task__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Task Notification</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__TruncateDescriptionFromLeftSide__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Truncates the copied product description from the left. The default (false) truncates from the right.</description>
        <label>Truncate Description from Left Side</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__YearEndDetailedLoggingLevel__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Year End Detailed Logging Level</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__codaAllowDuplicateVendorDocumentNumber__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Allow Duplicate Vendor Document Number</description>
        <label>Duplicate Vendor Document Number Allowed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>c2g__codaAlternativeDraftWatermarkId__c</fullName>
        <description>The id of the alternative draft watermark image to be displayed</description>
        <label>Alternative Draft Watermark Image ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>c2g__codaDisableVendorDocumentNumberCheck__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Disable Vendor Document Number Check</description>
        <label>Disable Vendor Document Number Check</label>
        <type>Checkbox</type>
    </fields>
    <label>Accounting Settings (FF)</label>
</CustomObject>